# ProjectVerse

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/: audio_loading_migration.md  web_inference_functional_requirements.md
examples/: flow_matching.rs  infer.rs  web.rs
scripts/: convert_checkpoints.py  dump_audio_stages.py  dump_contentvec_stages.py  dump_diffusion_stages.py  dump_flow_matching_stages.py  dump_gan_stages.py  dump_vocoder_stages.py
src/: attention.rs  audio.rs  contentvec.rs  diffusion.rs  f0_decoder.rs  flow.rs  gan.rs  gan_generator.rs  inference.rs  lib.rs  pitch.rs  slicer.rs  vocoder.rs  weights.rs
src/audio/: avio.rs  decode.rs
src/refine/: flow_matching.rs  mod.rs  model.rs  shallow_diffusion.rs
